--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "General": {
-        "screenWidth": 525,
-        "screenHeight": 286,
+        "screenWidth": 550,
+        "screenHeight": 403,
         "fps": 30,
         "pos": [
-            3068,
-            227
+            257,
+            62
         ],
         "fonts": {
             "title": "Outline.ttf",
@@ -19,6 +19,7 @@
         "gravity": -200.0
     },
     "Camera": {
+        "url": 1,
         "mtx": [
             [
                 1000.8078815209406,
@@ -162,24 +163,24 @@
     },
     "Surface": [
         [
-            1.4566478032815717,
-            -0.007508493831348323,
-            -27.939105546447045
+            0.06320845305688268,
+            0.0019218786402431026,
+            -2.582791350415541
         ],
         [
-            0.04669677349616614,
-            1.5367483641465582,
-            -245.2769253692261
+            0.7164945566433928,
+            -4.419821843390567,
+            534.8070755147965
         ],
         [
-            -3.4607305324879036e-05,
-            0.0001330252387087905,
+            0.0022039166175157865,
+            -0.010241481729062463,
             1.0
         ]
     ],
     "Colors": [
-        -85.41666666666667,
-        15.625,
-        6.666666666666667
+        -41.541666666666664,
+        12.333333333333334,
+        6.541666666666667
     ]
 }
