--- a/config.json
+++ b/config.json
@@ -1,22 +1,131 @@
 {
     "General": {
-        "screenWidth": 550,
-        "screenHeight": 403,
+        "screenWidth": 801,
+        "screenHeight": 488,
         "fps": 30,
         "pos": [
-            257,
-            62
+            246,
+            110
         ],
         "fonts": {
-            "title": "Outline.ttf",
-            "general": "Songarak.ttf"
+            "title": {
+                "family": "Keleti.ttf",
+                "size": {
+                    "s": 24,
+                    "m": 32,
+                    "l": 80
+                }
+            },
+            "general": {
+                "family": "Songarak.ttf",
+                "size": {
+                    "s": 17,
+                    "m": 22,
+                    "l": 32
+                }
+            }
         }
     },
-    "Physics": {
-        "box_width": 100,
-        "box_height": 50,
-        "ball_radius": 10,
-        "gravity": -200.0
+    "Menu": {
+        "Colors": {
+            "Accent": [
+                253,
+                178,
+                111
+            ],
+            "Text": {
+                "Light": [
+                    253,
+                    248,
+                    146
+                ],
+                "Dark": [
+                    162,
+                    78,
+                    130
+                ],
+                "Normal": [
+                    191,
+                    94,
+                    111
+                ]
+            },
+            "Shadows": [
+                178,
+                83,
+                103
+            ]
+        }
+    },
+    "Shooter": {
+        "Player": "\u0410\u0410\u0410",
+        "Colors": {
+            "Accent": [
+                209,
+                128,
+                128
+            ],
+            "Text": {
+                "Light": [
+                    153,
+                    162,
+                    168
+                ],
+                "Dark": [
+                    43,
+                    74,
+                    99
+                ],
+                "Normal": [
+                    60,
+                    119,
+                    141
+                ]
+            },
+            "Shadows": [
+                236,
+                242,
+                232
+            ]
+        }
+    },
+    "Lines": {
+        "Player": "\u041f\u0438\u043a",
+        "Physics": {
+            "box_width": 100,
+            "box_height": 50,
+            "ball_radius": 10,
+            "Gravity": -200.0
+        },
+        "Colors": {
+            "Accent": [
+                253,
+                245,
+                206
+            ],
+            "Text": {
+                "Light": [
+                    200,
+                    185,
+                    249
+                ],
+                "Dark": [
+                    43,
+                    74,
+                    99
+                ],
+                "Normal": [
+                    109,
+                    66,
+                    176
+                ]
+            },
+            "Shadows": [
+                168,
+                122,
+                231
+            ]
+        }
     },
     "Camera": {
         "url": 1,
@@ -163,24 +272,24 @@
     },
     "Surface": [
         [
-            0.06320845305688268,
-            0.0019218786402431026,
-            -2.582791350415541
+            1.5553408801844737,
+            0.016372009265099702,
+            -283.0229241657789
         ],
         [
-            0.7164945566433928,
-            -4.419821843390567,
-            534.8070755147965
+            0.014032212253918099,
+            1.641768833708422,
+            -309.53657010918016
         ],
         [
-            0.0022039166175157865,
-            -0.010241481729062463,
+            -1.1845956362085146e-05,
+            0.00018643689735082318,
             1.0
         ]
     ],
     "Colors": [
-        -41.541666666666664,
-        12.333333333333334,
-        6.541666666666667
+        -34,
+        -1,
+        -2
     ]
 }
