--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "General": {
-        "screenWidth": 801,
-        "screenHeight": 488,
+        "screenWidth": 647,
+        "screenHeight": 461,
         "fps": 30,
         "pos": [
-            246,
-            110
+            2938,
+            46
         ],
         "fonts": {
             "title": {
@@ -13,7 +13,7 @@
                 "size": {
                     "s": 24,
                     "m": 32,
-                    "l": 80
+                    "l": 60
                 }
             },
             "general": {
@@ -58,7 +58,7 @@
         }
     },
     "Shooter": {
-        "Player": "\u0410\u0410\u0410",
+        "Player": "\u041a\u0442\u043e-\u0442\u043e",
         "Colors": {
             "Accent": [
                 209,
@@ -90,7 +90,7 @@
         }
     },
     "Lines": {
-        "Player": "\u041f\u0438\u043a",
+        "Player": "\u042f",
         "Physics": {
             "box_width": 100,
             "box_height": 50,
@@ -128,7 +128,7 @@
         }
     },
     "Camera": {
-        "url": 1,
+        "url": 0,
         "mtx": [
             [
                 1000.8078815209406,
@@ -272,24 +272,24 @@
     },
     "Surface": [
         [
-            1.5553408801844737,
-            0.016372009265099702,
-            -283.0229241657789
+            1.519522156238271,
+            0.3376715902751712,
+            -186.73238942216972
         ],
         [
-            0.014032212253918099,
-            1.641768833708422,
-            -309.53657010918016
+            -0.1185255709913806,
+            1.8252937932672597,
+            -192.8173988887778
         ],
         [
-            -1.1845956362085146e-05,
-            0.00018643689735082318,
+            4.305846862578101e-05,
+            0.0005513076383407509,
             1.0
         ]
     ],
     "Colors": [
-        -34,
-        -1,
-        -2
+        -36,
+        3,
+        -12
     ]
 }
